[#324][BACK][TEST] - 도서 관련 서비스 테스트 코드 작성 (#425)
* feat(book) : 도서 작가 service 테스트 코드 작성

# Conflicts:
#	backend-server/src/test/java/shop/bluebooktle/backend/book/service/BookAuthorServiceTest.java

* feat(book) : 도서 이미지 service 테스트 코드 작성

* test(book): 도서 카테고리 서비스 테스트 코드 작성 (60%)

* test(user): 휴면 사용자 레디스 인증 코드 서비스 테스트 코드 작성 (100%)

* test(book): 로직 수정으로 인한 도서 관련 서비스 테스트 코드 주석 처리

* test(user): 사용자 서비스 테스트 코드 작성 (100%)

* test(user): AddressControllerTest, AddressControllerUnitTest 추가

* test(book): 로직 변경으로 인한 AuthorServiceTest 수정

* feat/test(book): BookAuthor 관련 서비스 메서드 정리 및 테스트 코드 수정

* test(book): AladinBook관련 서비스 메서드 수정 및 테스트 코드 추가

* cmt

* test(book): 도서 이미지 관련 서비스 테스트 코드 작성

---------

Co-authored-by: marf3927 <marf3927@gmail.com>